--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -17,21 +17,22 @@
   color: black;
   font-size: 2rem;
   box-shadow: none;
-  padding:1.6rem;
+  // padding:1.6rem;
+  width:46px;
 }
 
 .div-form-register
 {
   margin:0 auto;
   text-align: left;
-  padding: 15px 20px;
+  padding: 15px 0px;
   border-radius: 40px;
   position: relative;
 }
 
 .div-text-form-register
 {
-  margin: 22px auto 0rem auto;
+  margin: 51px auto 0rem auto;
   display: flex;
   font-size:22px;
   font-family: 'LatoBold';
