--- a/src/pages/add-paseo/add-paseo.scss
+++ b/src/pages/add-paseo/add-paseo.scss
@@ -42,13 +42,27 @@
 .btn-back-close-paseo
 {
   position: absolute;
-  top: 0;
-  right: 0;
-  font-size:20px;
+  top: 10px;
+  right: 10px;
+  font-size:26px;
   background: transparent;
   border: none;
   box-shadow: none;
+  color:white;
 }
+
+.icon-back-paseo
+{
+  filter: brightness(0) invert(1);
+}
+    
+
+
+.btn-back-close-paseo ion-icon
+{
+  font-weight: bolder !important;
+}
+
 
 .div-content-add-paseo
 {
