--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -38,7 +38,7 @@
 .form-login
 {
   padding-top:5px;
-  padding-left:22px;
+  padding-left:43px;
 }
 
 .form-login-pass .item-inner
@@ -69,6 +69,7 @@
 
 .btn-recover-pass a
 {
+  font-size:14px !important;
   margin-top:8px;
   padding-left:30px !important;
   color:#9B9B9B !important;
@@ -81,11 +82,11 @@ a
 
 .btn-send-form-login
 {
-  width: calc(100% - 68px);
-  margin: 22px 46px 22px 22px;
-  font-size: 22px;
-  border-radius: 10px;
-  height: 50px;
+  width: calc(100% - 46px);
+  margin: 40px 46px 22px 0px;
+  font-size: 18px;
+  border-radius: 8px;
+  height: 45px;
 }
 
 .btn-back-form
@@ -97,4 +98,9 @@ a
   border-radius: 10px;
   height: 50px;
   color:#9B9B9B !important;
+}
+
+.form-login .item .item-inner
+{
+  margin-left:0 !important;
 }
