--- a/src/pages/add-form/add-form.scss
+++ b/src/pages/add-form/add-form.scss
@@ -103,6 +103,19 @@
   margin-left:2rem;
 }
 
+.div-photo-added
+{
+  display: flex;
+  margin: 16px auto 20px;
+  font-size: 16px;
+}
+
+.txt-photo-added
+{
+  margin-left:15px;
+  font-size: 16px;
+}
+
 .btn-send-form
 {
   margin: 150px auto 34px auto !important;
