--- a/src/pages/pago-electronico/pago-electronico.scss
+++ b/src/pages/pago-electronico/pago-electronico.scss
@@ -147,6 +147,7 @@
 
 .modal-saldo-insuficiente
 {
-    height: 170px;
-    width:280px;
+    height: 100;
+    width:280px;    
+    margin: 160px auto auto auto !important;
 }
