--- a/src/pages/modal-saldo-insuficiente/modal-saldo-insuficiente.scss
+++ b/src/pages/modal-saldo-insuficiente/modal-saldo-insuficiente.scss
@@ -1,13 +1,13 @@
-.ion-content
+page-modal-saldo-insuficiente
 {
-    background:red;
+    .main
+    {
+        background: white;
+        padding: 20px 20px 21px 24px !important;
+        border-radius: 2px !important;
+    }
 }
 
-.container-modal-error-saldo
-{
-    margin:21px 20px 21px 24px;
-    text-align: left;
-}
 
 .title-error-saldo
 {
@@ -19,9 +19,141 @@
 .text-error-saldo
 {
     color:#0000008A;    
+    font-size:16px;
+    margin-bottom:35px;
+}
+
+.div-btn-aceptar-error-saldo
+{
+    position: relative;
 }
 
 .btn-aceptar-error-saldo
 {
     color:#0099F2;
+    font-size:14px;
+    background:transparent;
+    border:none;
+    position:absolute;
+    bottom:1px;
+    right:0;
 }
+
+
+
+
+ion-modal {
+    &.my-modal-inner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        ion-backdrop {
+            visibility: visible;
+        }
+
+        .modal-wrapper {
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            overflow: auto;
+            width: auto;
+            height: auto;
+            left: auto;
+            top: auto;
+            contain: content;
+
+            max-width: 70%;
+            max-height: 70%;
+
+            border-radius: 2px;
+            box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+
+            > .ion-page {
+                position: relative;
+                display: block;
+                width: auto;
+                height: auto;
+                contain: content;
+                box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+            }
+        }
+
+        &.my-stretch {
+            .modal-wrapper {
+                overflow: hidden;
+                width: 100%;
+                height: 100%;
+
+                > .ion-page {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
+
+    &.my-fullscreen {
+        .modal-wrapper {
+            position: absolute;
+            display: block;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }   
+}
+
+// page-modal-saldo-insuficiente {
+//     .main-view{
+//       background: transparent;
+//     }
+//     .overlay {
+//       position: fixed;
+//       top: 0;
+//       width: 100%;
+//       height: 100%;
+//       z-index: 1;
+//       opacity: .5;
+//       background-color: #333;
+//     }
+//     .modal_content {
+//       position: absolute;
+//       top: calc(50% - (50%/2));
+//       left: 0;
+//       right: 0;
+//       width: 100%;
+//       height: 50%;
+//       padding: 10px;
+//       z-index: 100;
+//       margin: 0 auto;
+//       padding: 10px;
+//       color: #333;
+//       background: #e8e8e8;
+//       background: -moz-linear-gradient(top, #fff 0%, #e8e8e8 100%);
+//       background: -webkit-linear-gradient(top, #fff 0%, #e8e8e8 100%);
+//       background: linear-gradient(to bottom, #fff 0%, #e8e8e8 100%);
+//       border-radius: 5px;
+//       box-shadow: 0 2px 3px rgba(51, 51, 51, .35);
+//       box-sizing: border-box;
+//       -moz-box-sizing: border-box;
+//       -webkit-box-sizing: border-box;
+//       overflow: hidden;
+//     }
+//   }
+
+
+
+
+// // .ion-content
+// // {
+// //     background:red;
+// // }
+
+// // .container-modal-error-saldo
+// // {
+// //     margin:21px 20px 21px 24px;
+// //     text-align: left;
+// // }
+
