--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -37,7 +37,7 @@
 @font-face
 {
   font-family: 'LatoSemiBold';
-  src: url('../assets/fonts/Lato/Lato-Black.ttf')
+  src: url('../assets/fonts/Lato/Lato-Semibold.ttf');
 }
 
 @font-face
