--- a/src/pages/add-form/add-form.scss
+++ b/src/pages/add-form/add-form.scss
@@ -25,7 +25,7 @@
 {
   text-align: left;
   font-size: 18px;
-  font-family: LatoBold;
+  font-family: LatoSemiBold;
   margin: 25px auto 0px 14px;
 }
 
@@ -63,7 +63,7 @@
 
 .div-btns-foto
 {
-  font-family:LatoBold;
+  font-family:LatoSemiBold;
   font-size:18px;
   // margin-top:10px;
   color:#01002F;
