--- a/src/pages/pago-electronico/pago-electronico.scss
+++ b/src/pages/pago-electronico/pago-electronico.scss
@@ -77,7 +77,7 @@
     background: none;
     border:#0099F2 solid 1px;
     color:#0099F2;
-    margin-top:10px;
+    margin:10px auto 30px auto;
     white-space: nowrap;
 
 }
