--- a/src/pages/walk-type/walk-type.scss
+++ b/src/pages/walk-type/walk-type.scss
@@ -36,6 +36,49 @@
   margin-bottom:8px;
 }
 
+.opc-walk.recomendado
+{
+  position:relative;
+  height: 49px;
+}
+
+.opc-walk.recomendado .text-walk
+{
+  margin:8px auto 22px 17px;
+}
+
+// .opc-walk.recomendado .price-walk
+// {
+//   margin:8px 17px 22px 17px;  
+// }
+
+.div-recomendado
+{
+  margin-top:1px;
+  position:absolute;
+  bottom:6px;
+  left:17px;
+  display: flex;
+}
+
+.img-star
+{
+  width:8px;
+  height: 8px;
+  margin:0 1px 2px 0;
+}
+
+.icon-star
+{
+  margin-bottom:2px;
+}
+
+.text-recomendado
+{
+  font-size:12px;
+  color:#E3A329;
+}
+
 .text-walk
 {
   font-size:16px;
