--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -52,6 +52,14 @@
   src: url('../assets/fonts/Roboto/Roboto-Regular.ttf');
 }
 
+@font-face
+{
+  font-family: 'RobotoMed';
+  src: url('../assets/fonts/Roboto/Roboto-Medium.ttf');
+}
+
+
+
 // GENERAL
 
 *
