--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
+page-home
+{
+  
+}
+
 .container-home
 {
   position: relative;
@@ -18,9 +23,15 @@
 .div-content-recorrido
 {
   margin-bottom:22px;
-  // border:solid 1px #D9E8ED;
+  border:solid 1px #D9E8ED;
   border-radius: 6px;
   padding:8px;
+  text-align: left;
+}
+
+.div-text-mascota-recorrido
+{
+  margin-left:10px;
 }
 
 .div-mascota-recorrido
@@ -38,8 +49,30 @@
 .item-estado-mascota-recorrido
 {
   display:flex;
+  color:#575C71;
+  font-size:12px;
+  margin:3px 0;
 }
 
+.div-estado
+{
+  color:#B495FA;  
+}
+
+.item-nombre-mascota-recorrido
+{
+  font-family:LatoSemiBold;
+  font-size:14px;
+}
+
+.div-valor-estado
+{
+  display: flex;
+  border: solid 1px #B495FA;
+  border-radius: 4px;
+  margin-left:4px;
+  padding:1px 2px;
+}
 
 .div-text-home
 {
@@ -285,11 +318,76 @@ page-home
   .div-estado
   {
     display:flex;
+    margin-left:2px;
   }
 
   .nombre-estado
   {
     margin-left:2px;
+  }
+
+  .div-img-recorrido
+  {
+    margin:17px 0px 6px   0px;
+  }
+
+  .div-paseador-recorrido
+  {
+    display: flex;    
+  }
+
+  .div-img-paseador
+  {
+    width:45px;
+    height: 45px;
+  }
+
+  .div-img-calif
+  {
+    width:11px;
+    height: 11px;
+  }
+
+  .div-datos-paseador
+  {
+    flex-grow: 1;
+    text-align: left;
+    height: fit-content;
+    margin: auto 0 auto 7px;
+  }
+
+  .div-nombre-calif
+  {
+    display:flex;
+    font-family: LatoSemiBold;
+    color:#575C71;
+    font-size:14px;
+    flex-grow: 1;
+  }
+
+  .calif-paseador
+  {
+    font-family: LatoBold;
+    margin:0 2px 0 4px;
+  }
+
+  .btn-ver-perfil-paseador
+  {
+    background:none;
+    font-size:12px;
+    color:#0099F2;
+    border:none;
+    padding:0;    
+  }
+
+  .btn-ver
+  {
+    background:#0099F2;
+    color:white;
+    font-size:16px;
+    width: 79px;
+    height: 35px;
+    border-radius: 8px;
   }
 
   .item-dato-mascota
