--- a/src/pages/modal-conf-delete-mascota/modal-conf-delete-mascota.scss
+++ b/src/pages/modal-conf-delete-mascota/modal-conf-delete-mascota.scss
@@ -1,3 +1,121 @@
-page-modal-conf-delete-mascota {
+page-modal-conf-delete-mascota 
+{
+    .main
+    {
+        background: white;
+        padding: 20px 20px 21px 24px !important;
+        border-radius: 2px !important;
+    }
 
+    .div-btns-delete-mascota
+    {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .btn-eliminar 
+    {
+        background: none;
+        border: none;
+        color: #0099F2;
+        font-family:RobotoMed;
+        font-size:14px;
+        padding:0;
+    }
+}
+
+.title-error-saldo
+{
+    font-size:20px;
+    color:#000000;
+    margin-bottom:15px;   
+}
+
+.text-error-saldo
+{
+    color:#0000008A;    
+    font-size:16px;
+    margin-bottom:35px;
+}
+
+.div-btn-aceptar-error-saldo
+{
+    position: relative;
+}
+
+.btn-aceptar-error-saldo
+{
+    color:#0099F2;
+    font-size:14px;
+    background:transparent;
+    border:none;
+    position:absolute;
+    bottom:1px;
+    right:0;
+}
+
+
+
+
+ion-modal {
+    &.my-modal-conf-delete {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        ion-backdrop {
+            visibility: visible;
+        }
+
+        .modal-wrapper {
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            overflow: auto;
+            width: auto;
+            height: auto;
+            left: auto;
+            top: auto;
+            contain: content;
+
+            max-width: 70%;
+            max-height: 70%;
+
+            border-radius: 2px;
+            box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+
+            > .ion-page {
+                position: relative;
+                display: block;
+                width: auto;
+                height: auto;
+                contain: content;
+                box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+            }
+        }
+
+        &.my-stretch {
+            .modal-wrapper {
+                overflow: hidden;
+                width: 100%;
+                height: 100%;
+
+                > .ion-page {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
+
+    &.my-fullscreen {
+        .modal-wrapper {
+            position: absolute;
+            display: block;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }   
 }
