--- a/principal/css/theme.css
+++ b/principal/css/theme.css
@@ -1,4 +1,4 @@
-ƒ/*!
+/*!
  * Color original: # 5533ff - nuevo: # 5dc1b9
  * Dashcore 2.0 (https://themeforest.net/user/5studios)
  * Sass & Startup HTML Template 
@@ -18594,23 +18594,28 @@ section,
   width: 100%;
   height: 100%;
   border-radius: 100px;
-  -webkit-transform: translate(80%, -30%) rotate(-35deg);
+  /* ESTO NO ES */
+  -webkit-transform: translate(80%, -30%) rotate(-35deg);   
           transform: translate(80%, -30%) rotate(-35deg);
   /* background-image: linear-gradient(45deg, #5dc1b9 40%, #506690 100%);  */
 }
+
+ /* ESTO SI ES */
   @media (min-width: 768px) {
     .app-landing-2-header .background-shape-main {
       height: 150%;
-      -webkit-transform: translate(25%, -25%) skewY(30deg);
-              transform: translate(25%, -25%) skewY(30deg); } }
+      -webkit-transform: translate(60%, -30%) rotate(30deg);
+              transform: translate(60%, -30%) rotate(30deg); } }
   @media (min-width: 992px) {
     .app-landing-2-header .background-shape-main {
-      -webkit-transform: translate(20%, -30%) skewY(30deg);
-              transform: translate(20%, -30%) skewY(30deg); } }
+      -webkit-transform: translate(43%, -25%) rotate(30deg);
+              transform: translate(43%, -25%) rotate(30deg); 
+            } }
   @media (min-width: 1200px) {
     .app-landing-2-header .background-shape-main {
-      -webkit-transform: translate(30%, -10%) skewY(30deg);
-              transform: translate(30%, -10%) skewY(30deg); } }
+      -webkit-transform: translate(45%, -15%) rotate(30deg);
+              transform: translate(45%, -15%) rotate(30deg); 
+    }}
 
 .app-landing-2-header .animation-shape {
   position: absolute;
