--- a/veterinarios/mail-vet/styles.css
+++ b/veterinarios/mail-vet/styles.css
@@ -6,6 +6,12 @@
 
 @font-face 
 {
+    font-family: "LatoSemibold";
+    src: url('./fonts/Lato/Lato-Semibold.ttf');
+}
+
+@font-face 
+{
     font-family: "LatoBold";
     src: url('./fonts/Lato/Lato-Bold.ttf');
 }
@@ -30,6 +36,11 @@ img
 .bold
 {
     font-family: LatoBold;
+}
+
+.semibold
+{
+    font-family: LatoSemibold;
 }
 
 .div-container-mail
